--- a/apps/sio-demo/src/app/private/private.page.html
+++ b/apps/sio-demo/src/app/private/private.page.html
@@ -1,3 +1,3 @@
-<sio-page title="one.PAGE_TITLE" menu>
+<sio-page title="private.T_PAGE" menu>
   <sio-menu-item icon="person" url="http://www.libero.it" [badge]="100"></sio-menu-item>
 </sio-page>
