--- a/libs/sio/core/src/lib/components/input/input.component.html
+++ b/libs/sio/core/src/lib/components/input/input.component.html
@@ -1,13 +1,12 @@
 <ng-container *transloco="let t">
   <ion-item
-    [lines]="this.lines"
     [class.invalid]="this.invalid"
     [color]="this.color"
   >
-    <ion-label [position]="this.position">
-      {{ t(this.label) }}
-    </ion-label>
     <ion-input
+      [label] = "t(this.label)"
+      [labelPlacement] = "this.position"
+      fill="outline"
       [(ngModel)]="this.valueInput"
       [autocapitalize]="this.autocapitalize"
       [autocomplete]="this.autocomplete"
@@ -19,13 +18,8 @@
       [debounce]="this.debounce"
       [disabled]="this.disabled"
       [type]="this._type"
+      [errorText]="this.error"
+      [helperText]="this.label"
     ></ion-input>
-    <ion-note color="danger" *ngIf="this.invalid && this.dirty" slot="helper">{{
-      this.error | json
-    }}</ion-note>
-    <ion-note slot="error">finalmengte</ion-note>
-    <ion-note *ngIf="!this.invalid || !this.dirty" slot="helper"
-      >&nbsp;</ion-note
-    >
   </ion-item>
 </ng-container>
