--- a/libs/sio/core/src/lib/components/input/input.component.scss
+++ b/libs/sio/core/src/lib/components/input/input.component.scss
@@ -1,7 +1,7 @@
 :host {
-  ion-text {
+  /*ion-text {
     text-align: left important;
-  }
+  }*/
   .invalid {
     --highlight-color-valid: red; // valid underline color
   }
