--- a/libs/core/src/lib/components/app/app.component.scss
+++ b/libs/core/src/lib/components/app/app.component.scss
@@ -1,6 +1,8 @@
 :host {
   ion-split-pane {
-    --border: 0px;
-    --side-width: 200px;
+    //--side-min-width: 300px;
+    //--side-width: 360px;
+    //--side-max-width: 360px;
+    --border: 0px 0px 0px 0px;
   }
 }
