--- a/libs/core/src/lib/components/page/page.component.html
+++ b/libs/core/src/lib/components/page/page.component.html
@@ -1,8 +1,8 @@
 <ion-header *ngIf="this.toolbar && !this.fullmode" collapse="fade" [translucent]="true" class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar [color]="this.color">
     <ion-buttons slot="start">
       <ng-container>
-        <ion-menu-button *ngIf="this.menu"></ion-menu-button>
+        <ion-menu-button *ngIf="this.menu" menu="start"></ion-menu-button>
         <ion-back-button *ngIf="this.back"></ion-back-button>
       </ng-container>
     </ion-buttons>
@@ -10,24 +10,29 @@
     <ion-buttons slot="end">
       <ng-content select="[slot='end']"> </ng-content>
     </ion-buttons>
+    <ion-buttons *ngIf="!this.sioCoreAppComponentState.snapshot.split" slot="end">
+      <ng-content select="[slot='mobile']"></ng-content>
+      <ion-menu-button *ngIf="true" menu="end"></ion-menu-button>  
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content [color]="this.color" [fullscreen]="true" class="ion-padding">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-header *ngIf="this.toolbar && !this.fullmode" collapse="condense">
     <ion-toolbar>
       <ion-title size="large">{{ this.title | transloco }}</ion-title>
     </ion-toolbar>
   </ion-header>
-  <div #container>
+  <div #content>
     <ng-content></ng-content>
   </div>
-  <ng-container *ngIf="!container.hasChildNodes()">
+  <ng-container *ngIf="!content.hasChildNodes()">
     <div id="container">
-    <h1>{{ 'PAGE_COMPONENT_DEFAULT_1' | transloco }}</h1>
-    <strong>{{ 'PAGE_COMPONENT_DEFAULT_2' | transloco }}</strong>
-    <p>
-      {{ 'PAGE_COMPONENT_LINK'}} <a target="_blank" rel="noopener noreferrer" href="https://github.com/silicia-apps/sio/wiki">SIO Framework</a>
-    </p>
-  </div>
+      <h1>{{ 'PAGE_COMPONENT_DEFAULT_1' | transloco }}</h1>
+      <strong>{{ 'PAGE_COMPONENT_DEFAULT_2' | transloco }}</strong>
+      <p>
+        {{ 'PAGE_COMPONENT_LINK'}} <a target="_blank" rel="noopener noreferrer"
+          href="https://github.com/silicia-apps/sio/wiki">SIO Framework</a>
+      </p>
+    </div>
   </ng-container>
 </ion-content>
