--- a/libs/core/src/lib/components/app/app.component.scss
+++ b/libs/core/src/lib/components/app/app.component.scss
@@ -1,8 +1,17 @@
 :host {
+  
   ion-split-pane {
     //--side-min-width: 300px;
     //--side-width: 360px;
     //--side-max-width: 360px;
     --border: 0px 0px 0px 0px;
   }
+  
+  ion-menu::part(container) {
+    background-color: var(--sio-left-menu-color);
+  }
+
+  
 }
+
+
