update nx to 16.5.2

--- a/apps/demo/src/app/app.component.scss
+++ b/apps/demo/src/app/app.component.scss
@@ -1,3 +1,7 @@
-:root {
-    --sio-left-menu-color: #ff3700;
-}    
+ 
+  sio-app[color="red"] {
+    --sio-left-menu-content-color: #ff3700;
+    --sio-left-menu-header-color: #b19d97;
+    --sio-left-menu-footer-color: #00ff00;
+  }
+
