--- a/libs/core/src/lib/components/slide/slide.component.html
+++ b/libs/core/src/lib/components/slide/slide.component.html
@@ -1,7 +1,7 @@
 <ion-list lines="none">
   <ion-list-header><ion-label>Più Venduti</ion-label></ion-list-header>
   <ion-item>
-    <swiper-container [modules]="this.swiperModules"  [slidesPerView] = "2.2" [spaceBetween]="5">
+    <swiper-container [modules]="this.swiperModules"  slidesPerView = "auto" [spaceBetween]="5">
       <swiper-slide><ion-card><img src="https://loremflickr.com/150/120?random=5"><ion-card-content>
         €3.00
       </ion-card-content></ion-card></swiper-slide>
