--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -1,3 +1,2 @@
-<sio-app title="DEMO" sidemenu="overlay">
-  <p slot="side_content">test</p>
+<sio-app title="DEMO" sidemenu="overlay" color="danger">
 </sio-app>
