--- a/libs/core/src/lib/components/slide/slide.component.html
+++ b/libs/core/src/lib/components/slide/slide.component.html
@@ -1,36 +1,18 @@
 <ion-list lines="none">
   <ion-list-header><ion-label>Più Venduti</ion-label></ion-list-header>
   <ion-item>
-    <swiper-container [modules]="this.swiperModules"  slidesPerView = "auto" [spaceBetween]="5">
-      <swiper-slide><ion-card><img src="https://loremflickr.com/150/120?random=5"><ion-card-content>
-        €3.00
-      </ion-card-content></ion-card></swiper-slide>
-      <swiper-slide><ion-card><img src="https://loremflickr.com/150/120?random=6"><ion-card-content>
-        €10.00
-      </ion-card-content></ion-card></swiper-slide>
-      <swiper-slide><ion-card><img src="https://loremflickr.com/150/120?random=9"><ion-card-content>
-        €3.00
-      </ion-card-content></ion-card></swiper-slide>
-      <swiper-slide><ion-card><img src="https://loremflickr.com/150/120?random=1067"><ion-card-content>
-        €3.00
-      </ion-card-content></ion-card></swiper-slide>
-      <swiper-slide><img src="https://loremflickr.com/120/120?random=9"></swiper-slide>
-      <swiper-slide><img src="https://loremflickr.com/120/120?random=0"></swiper-slide>
-      <swiper-slide><img src="https://loremflickr.com/120/120?random=1"></swiper-slide>
-      <swiper-slide><img src="https://loremflickr.com/120/120?random=2"></swiper-slide>
-      <swiper-slide><img src="https://loremflickr.com/120/120?random=3"></swiper-slide>
-      <swiper-slide><img src="https://loremflickr.com/120/120?random=4"></swiper-slide>
-      <swiper-slide><img src="https://loremflickr.com/120/120?random=5"></swiper-slide>
-      <swiper-slide><img src="https://loremflickr.com/120/120?random=6"></swiper-slide>
+    <swiper-container [modules]="this.swiperModules"  slidesPerView = "auto" [spaceBetween]="1">
+      
     </swiper-container>
 </ion-item>
 <ion-list-header><ion-label>Offerte</ion-label></ion-list-header>
 <ion-item>
-  <swiper-container [modules]="this.swiperModules" slides-per-view="auto" [spaceBetween]="5">
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=125"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=126"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=127"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=128"></swiper-slide>
+  <swiper-container [modules]="this.swiperModules" slides-per-view="auto" [spaceBetween]="1">
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/120?random=125"></sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/120?random=125"></sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/120?random=125"></sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/120?random=125"></sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/120?random=125"></sio-card></swiper-slide>
     <swiper-slide><img src="https://loremflickr.com/120/120?random=129"></swiper-slide>
     <swiper-slide><img src="https://loremflickr.com/120/120?random=130"></swiper-slide>
     <swiper-slide><img src="https://loremflickr.com/120/120?random=131"></swiper-slide>
