--- a/apps/demo/src/app/app.component.scss
+++ b/apps/demo/src/app/app.component.scss
@@ -1,1 +1,5 @@
-
+sio-app {
+  --sio-left-menu-content-color: #ffffff;
+  --sio-left-menu-footer-color: #ffffff;
+  --sio-left-menu-header-color: #ffffff;
+}
