--- a/libs/core/src/lib/components/app/app.component.scss
+++ b/libs/core/src/lib/components/app/app.component.scss
@@ -1,8 +1,10 @@
 :host[color="primary"] {
     --sio-toolbar-color: var(--ion-color-primary);
     --sio-left-menu-header-color: var(--ion-color-primary);
+    --sio-left-menu-content-color: var(--ion-color-primary);
     --sio-left-menu-footer-color: var(--ion-color-primary);
     --sio-right-menu-header-color: var(--ion-color-primary);
+    --sio-right-menu-content-color: var(--ion-color-primary);
     --sio-right-menu-footer-color: var(--ion-color-primary);
 }
 
