--- a/libs/core/src/lib/components/slide/slide.component.html
+++ b/libs/core/src/lib/components/slide/slide.component.html
@@ -1,60 +1,62 @@
 <ion-list lines="none">
   <ion-list-header><ion-label>Più Venduti</ion-label></ion-list-header>
   <ion-item>
-    <swiper-container [modules]="this.swiperModules"  slidesPerView = "auto" [spaceBetween]="1">
+    <swiper-container [modules]="this.swiperModules" slides-per-view="auto" [spaceBetween]="1">
+      <swiper-slide> 
+        <sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125">
+        </sio-card></swiper-slide>
+      <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125"></sio-card></swiper-slide>
+      <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125"></sio-card></swiper-slide>
+      <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125"></sio-card></swiper-slide>
+      <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125">
+        
+      </sio-card></swiper-slide>
       
     </swiper-container>
-</ion-item>
+  </ion-item>
 <ion-list-header><ion-label>Offerte</ion-label></ion-list-header>
 <ion-item>
   <swiper-container [modules]="this.swiperModules" slides-per-view="auto" [spaceBetween]="1">
-    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/120?random=125"></sio-card></swiper-slide>
-    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/120?random=125"></sio-card></swiper-slide>
-    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/120?random=125"></sio-card></swiper-slide>
-    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/120?random=125"></sio-card></swiper-slide>
-    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/120?random=125"></sio-card></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=129"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=130"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=131"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=132"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=133"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=134"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=135"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=136"></swiper-slide>
+    <swiper-slide> 
+      <sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125">
+      </sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125"></sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125"></sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125"></sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125">
+      
+    </sio-card></swiper-slide>
+    
   </swiper-container>
 </ion-item>
 <ion-list-header><ion-label>Bevande</ion-label></ion-list-header>
 <ion-item>
-<swiper-container [modules]="this.swiperModules" slides-per-view="auto" [spaceBetween]="5">
-  <swiper-slide><img src="https://loremflickr.com/120/120?random=25"></swiper-slide>
-  <swiper-slide><img src="https://loremflickr.com/120/120?random=26"></swiper-slide>
-  <swiper-slide><img src="https://loremflickr.com/120/120?random=27"></swiper-slide>
-  <swiper-slide><img src="https://loremflickr.com/120/120?random=28"></swiper-slide>
-  <swiper-slide><img src="https://loremflickr.com/120/120?random=29"></swiper-slide>
-  <swiper-slide><img src="https://loremflickr.com/120/120?random=30"></swiper-slide>
-  <swiper-slide><img src="https://loremflickr.com/120/120?random=31"></swiper-slide>
-  <swiper-slide><img src="https://loremflickr.com/120/120?random=32"></swiper-slide>
-  <swiper-slide><img src="https://loremflickr.com/120/120?random=33"></swiper-slide>
-  <swiper-slide><img src="https://loremflickr.com/120/120?random=34"></swiper-slide>
-  <swiper-slide><img src="https://loremflickr.com/120/120?random=35"></swiper-slide>
-  <swiper-slide><img src="https://loremflickr.com/120/120?random=36"></swiper-slide>
-</swiper-container>
+  <swiper-container [modules]="this.swiperModules" slides-per-view="auto" [spaceBetween]="1">
+    <swiper-slide> 
+      <sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125">
+      </sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125"></sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125"></sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125"></sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125">
+      
+    </sio-card></swiper-slide>
+    
+  </swiper-container>
 </ion-item>
 <ion-list-header><ion-label>Offerte</ion-label></ion-list-header>
 <ion-item>
-  <swiper-container [modules]="this.swiperModules" slides-per-view="auto" [spaceBetween]="5">
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=125"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=126"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=127"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=128"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=129"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=130"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=131"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=132"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=133"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=134"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=135"></swiper-slide>
-    <swiper-slide><img src="https://loremflickr.com/120/120?random=136"></swiper-slide>
+  <swiper-container [modules]="this.swiperModules" slides-per-view="auto" [spaceBetween]="1">
+    <swiper-slide> 
+      <sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125">
+      </sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125"></sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125"></sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125"></sio-card></swiper-slide>
+    <swiper-slide><sio-card title="€ 5,00" subtitle="coca cola" img="https://loremflickr.com/120/60?random=125">
+      
+    </sio-card></swiper-slide>
+    
   </swiper-container>
 </ion-item>
 </ion-list>
