Migrate Transloco to ngx-translate library

--- a/libs/auth/src/lib/components/badge/badge.component.html
+++ b/libs/auth/src/lib/components/badge/badge.component.html
@@ -21,7 +21,7 @@
     <ion-item button (click)="(this.urlLoginPage)">
       <sio-icon [name]="this.icon" [slot]="this.position"></sio-icon>
       <ion-label>
-        {{ this.text | transloco }}
+        {{ this.text | translate }}
       </ion-label>
     </ion-item>
   </div>
