--- a/libs/core/src/lib/components/header/header.component.html
+++ b/libs/core/src/lib/components/header/header.component.html
@@ -6,7 +6,7 @@
         <ion-back-button *ngIf="this.back"></ion-back-button>
       </ng-container>
     </ion-buttons>
-    <ion-title>{{ this.title| transloco }}</ion-title>
+    <ion-title>{{ this.title| translate }}</ion-title>
     <ion-buttons slot="end">
       <ng-content select="[slot='end']"> </ng-content>
     </ion-buttons>
