--- a/libs/auth/src/lib/components/login/login.component.html
+++ b/libs/auth/src/lib/components/login/login.component.html
@@ -7,12 +7,12 @@
     </sio-form>
     {{ this.color }}
     <p>&nbsp;</p>
-    <p *ngIf="this.mode === 'signin'" [innerHTML]="'auth.LOGIN_COMPONENT_DO_NOT_HAVE_ACCOUNT' | transloco"></p>
+    <p *ngIf="this.mode === 'signin'" [innerHTML]="'auth.LOGIN_COMPONENT_DO_NOT_HAVE_ACCOUNT' | translate"></p>
 </sio-card>
 <sio-card color="light" *ngIf="this.social">
   <ion-card-header>
     <ion-card-subtitle>{{
-      'auth.TITLE_SOCIAL_LOGIN' | transloco
+      'auth.TITLE_SOCIAL_LOGIN' | translate
     }}</ion-card-subtitle>
   </ion-card-header>
   <ion-card-content>
@@ -21,14 +21,14 @@
       color="primary"
       (click)="this.oAuth2Login('facebook')"
       ><sio-icon name="logo-facebook" slot="start"></sio-icon
-      >{{ 'auth.BUTTON_FACEBOOK_LOGIN' | transloco }}</ion-button
+      >{{ 'auth.BUTTON_FACEBOOK_LOGIN' | translate }}</ion-button
     >
     <ion-button
       expand="block"
       color="danger"
       (click)="this.oAuth2Login('google')"
       ><sio-icon name="logo-google" slot="start"></sio-icon
-      >{{ 'auth.BUTTON_GOOGLE_LOGIN' | transloco }}</ion-button
+      >{{ 'auth.BUTTON_GOOGLE_LOGIN' | translate }}</ion-button
     >
   </ion-card-content>
 </sio-card>
