--- a/libs/core/src/lib/components/dark-mode-toogle/dark-mode-toggle.component.html
+++ b/libs/core/src/lib/components/dark-mode-toogle/dark-mode-toggle.component.html
@@ -2,6 +2,6 @@
   <ion-item lines="none" button>
     <sio-icon [name]="this.icon" slot="start"></sio-icon>
     <ion-toggle #darkmode_toggle (ionChange)="this.onChange($event)" slot="end"></ion-toggle>
-    <label>{{ this.label | transloco }}</label>
+    <label>{{ this.label | translate }}</label>
   </ion-item>
 </ion-list>
