--- a/libs/core/src/lib/components/form/form.component.html
+++ b/libs/core/src/lib/components/form/form.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t">
+
   <form
     *ngIf="(this.state.state$ | async)?.layout"
     ngxsForm="{{ this.state.name }}.data"
@@ -21,7 +21,7 @@
       type="submit"
       [disabled]="!this.state.valid"
     >
-      {{ t('auth.SUBMIT') }}
+      {{ 'auth.SUBMIT' | translate }}
     </ion-button>
     <ion-button
       *ngIf="this.cancel"
@@ -29,7 +29,7 @@
       color="danger"
       (click)="this.state.resetForm()"
     >
-      {{ t('auth.RESET') }}
+      {{ 'auth.RESET' || translate }}
     </ion-button>
   </form>
-</ng-container>
+
