--- a/libs/core/src/lib/components/menu/menu.component.html
+++ b/libs/core/src/lib/components/menu/menu.component.html
@@ -4,7 +4,7 @@
     <ion-accordion [value]="this.sioCoreMenuState.caption" [toggleIconSlot]="this.toggleIconSlot"
       [toggleIcon]="this.toggleIcon">
       <ion-item slot="header" [color]="this.color">
-        <ion-label>{{ this.sioCoreMenuState.caption | transloco }}</ion-label>
+        <ion-label>{{ this.sioCoreMenuState.caption | translate }}</ion-label>
       </ion-item>
       <ion-list slot="content" inset="true">
         <sio-menu-item *ngFor="
