--- a/libs/core/src/lib/components/form/form.component.html
+++ b/libs/core/src/lib/components/form/form.component.html
@@ -29,7 +29,7 @@
       color="danger"
       (click)="this.state.resetForm()"
     >
-      {{ 'auth.RESET' || translate }}
+      {{ 'auth.RESET' | translate }}
     </ion-button>
   </form>
 
