--- a/libs/core/src/lib/components/input/input.component.html
+++ b/libs/core/src/lib/components/input/input.component.html
@@ -3,7 +3,7 @@
     [color]="this.color"
   >
     <ion-input
-      [label] = "{{ this.label | translate }}"
+      label = "{{ this.label | translate }}"
       [labelPlacement] = "this.position"
       fill="outline"
       [(ngModel)]="this.valueInput"
