add select language component

--- a/apps/demo/src/app/home/home.page.html
+++ b/apps/demo/src/app/home/home.page.html
@@ -1,3 +1,3 @@
 <sio-page title="test" color="primary">
-    {{ 'M_HOME' | translate }}
+    <sio-language-selector></sio-language-selector>
 </sio-page>   
